--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,16 @@ bin-release/
 *.ipa
 *.apk
 
+*.gen
+*.nes
+*.sms
+*.gb
+*.gbc
+*.gg
+*.snes
+*.nds
+
+
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
